Update on Cura profile

--- a/Slicer-profiles/Cura/definition_changes/the+babyBear_settings.inst.cfg
+++ b/Slicer-profiles/Cura/definition_changes/the+babyBear_settings.inst.cfg
@@ -10,34 +10,32 @@ setting_version = 17
 [values]
 machine_center_is_zero = True
 machine_depth = 160
-machine_end_gcode = M107
-	M104 S0
+machine_end_gcode = M104 S0
 	M140 S0
-	;Retract the filament
-	G92 E1
+	G92 E1 Y0
 	G1 E-1 F300
 	G91
-	G1 X5 F500
-	G1 X2 Z2 F500
-	G1 Z3 F1000
+	G1 Z20
 	G90
-	G1 X82 F5000
+	G1 X82
 	M84
 machine_head_with_fans_polygon = [[-20, 10], [-20, 10], [10, -10], [-20, -10]]
 machine_height = 235
 machine_shape = elliptic
 machine_start_gcode = G28 ;Home
-	G1 Z5.0 F6000;Move the head up
-	G1 X82 ;Move the X out of the print bed
-	;Prime the extruder
+	G1 Z5.0 F6000
+	G1 X82
 	G92 E0
-	G1 F200 E5
-	;Wipe out the material
-	G1 Z0.2 E7 F500
-	G1 X79
-	G1 F200 E6
-	G92 E0 ;Reset Extruder
+	M106 S255
+	G1 F150 E15
+	G1 Z0.3
+	G1 X79 Z0.05
+	G1 X78
+	G92 E1
+	G1 E0
 	G1 Z5.0
+	M107
+	G92 E0
 machine_use_extruder_offset_to_offset_coords = False
 machine_width = 160
 
